--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.1.5",
     "classnames": "^2.2.6",
+    "immer": "^9.0.12",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^8.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "redux": "^4.2.0",
+    "redux-saga": "^1.1.3",
+    "reselect": "^4.1.5"
   },
   "scripts": {
     "start": "react-scripts start",
