--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.1.5",
+    "axios": "^0.27.2",
     "classnames": "^2.2.6",
     "immer": "^9.0.12",
     "react": "^16.13.1",
@@ -30,7 +31,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "server": "json-server --watch src/db.json"
   },
   "eslintConfig": {
     "extends": "react-app"
