--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
     "redux-saga": "^1.1.3",
     "reselect": "^4.1.5"
   },
+  "proxy": "http://localhost:3001",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server --watch src/db.json"
+    "server": "json-server --watch src/db.json --port 3001"
   },
   "eslintConfig": {
     "extends": "react-app"
