--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-router-dom": "^5.1.5",
     "axios": "^0.27.2",
     "classnames": "^2.2.6",
+    "date-fns": "^2.28.0",
     "immer": "^9.0.12",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
