--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^2.8.10",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.61",
@@ -16,18 +17,21 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.1.5",
+    "@types/yup": "^0.29.14",
     "axios": "^0.27.2",
     "classnames": "^2.2.6",
     "date-fns": "^2.28.0",
     "immer": "^9.0.12",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^7.31.2",
     "react-redux": "^8.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
     "redux-saga": "^1.1.3",
-    "reselect": "^4.1.5"
+    "reselect": "^4.1.5",
+    "yup": "^0.32.11"
   },
   "proxy": "http://localhost:8888",
   "scripts": {
