--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "classnames": "^2.2.6",
     "date-fns": "^2.28.0",
     "immer": "^9.0.12",
+    "medium-zoom": "^1.0.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^7.31.2",
