--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "date-fns": "^2.28.0",
     "immer": "^9.0.12",
     "medium-zoom": "^1.0.6",
+    "node-sass": "^7.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^7.31.2",
@@ -58,6 +59,7 @@
     ]
   },
   "devDependencies": {
+    "sass": "^1.52.1",
     "typescript": "^4.6.4"
   }
 }
